# dotenv-webauthn-crypt

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  TODO_BUGS.md  pyproject.toml  setup.py  update_venv.sh  verify_module.py
.github/workflows/: build_wheels.yml
docs/: .~lock.purpose.md#  SCAFFOLDING_WIN32_NATIVE.md  conf.py  index.rst  purpose.md
ext/: _webauthn.cpp  build_tests.sh  harness.cpp  native.cpp  test_cross_platform.cpp  test_device_info.cpp  test_hmac_secret.cpp  test_webauthn.cpp
src/dotenv_webauthn_crypt/: __init__.py  cli.py  core.py
tests/: create_windows_passkey.cpp  test_browser_credential.json  test_browser_webauthn.py  test_core.py  test_device_info_browser.py  test_device_info_result.json
