[build-system]
requires = ["setuptools>=61.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "dotenv-webauthn-crypt"
version = "0.1.6"
authors = [
  { name="Jose Luu", email="jose.luu@example.com" },
]
description = "Drop-in dotenv replacement with Windows Hello encryption."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=42.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security :: Cryptography",
]

[project.urls]
"Homepage" = "https://github.com/joseluu/dotenv-webauthn-crypt"
"Bug Tracker" = "https://github.com/joseluu/dotenv-webauthn-crypt/issues"

[project.scripts]
dotenv-webauthn-crypt-cli = "dotenv_webauthn_crypt.cli:main"

[tool.setuptools]
packages = ["dotenv_webauthn_crypt"]
package-dir = {"" = "src"}

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-win32 pp*"

[tool.cibuildwheel.windows]
before-build = "pip install pybind11"
