[build-system]
requires = ["setuptools>=61.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "dotenv-webauthn-crypt"
version = "0.3.0a1"
authors = [
  { name="Jose Luu", email="jose.luu@gmail.com" },
]
description = "Drop-in dotenv replacement with Windows Hello encryption."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "ecdsa>=0.18.0",
    "cbor2>=5.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Security :: Cryptography",
]

[project.urls]
"Homepage" = "https://github.com/joseluu/dotenv-webauthn-crypt"
"Bug Tracker" = "https://github.com/joseluu/dotenv-webauthn-crypt/issues"

[project.scripts]
dotenv-webauthn-crypt-cli = "dotenv_webauthn_crypt.cli:main"

[tool.setuptools]
packages = ["dotenv_webauthn_crypt"]
package-dir = {"" = "src"}

[tool.cibuildwheel]
build = "cp311-* cp312-*"
skip = "*-win32 pp*"

[tool.cibuildwheel.windows]
before-build = "pip install pybind11"
